# UFF_PyTorch

./: LICENSE  README.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml  setup.py
uff_torch/: __init__.py  _atom_typing.cpp  atom_typing.py  builder.py  model.py  parameters.py  triton_utils.py  utils.py
uff_torch/data/: __init__.py  uff_atomic_params.json
